testdata/negative/missing_semi.rs
fn main() {
    let x = 1
    let y = 2; // Парсер должен восстановиться и найти ошибку в предыдущей строке
}